--- a/8-03.md
+++ b/8-03.md
@@ -1,19 +1,4 @@
-# Домашнее задание к занятию «GitLab»
-
-### Инструкция по выполнению домашнего задания
-
-   1. Сделайте `fork` [репозитория c шаблоном решения](https://github.com/netology-code/sys-pattern-homework) к себе в GitHub и переименуйте его по названию или номеру занятия, например, https://github.com/имя-вашего-репозитория/gitlab-hw или https://github.com/имя-вашего-репозитория/8-03-hw.
-   2. Выполните клонирование этого репозитория к себе на ПК с помощью команды `git clone`.
-   3. Выполните домашнее задание и заполните у себя локально этот файл README.md:
-      - впишите сверху название занятия, ваши фамилию и имя;
-      - в каждом задании добавьте решение в требуемом виде — текст, код, скриншоты, ссылка.
-      - для корректного добавления скриншотов используйте [инструкцию «Как вставить скриншот в шаблон с решением»](https://github.com/netology-code/sys-pattern-homework/blob/main/screen-instruction.md);
-      - при оформлении используйте возможности языка разметки md. Коротко об этом можно посмотреть в [инструкции  по MarkDown](https://github.com/netology-code/sys-pattern-homework/blob/main/md-instruction.md).
-   4. После завершения работы над домашним заданием сделайте коммит `git commit -m "comment"` и отправьте его на GitHub `git push origin`.
-   5. Для проверки домашнего задания в личном кабинете прикрепите и отправьте ссылку на решение в виде md-файла в вашем GitHub.
-   6. Любые вопросы по выполнению заданий задавайте в чате учебной группы или в разделе «Вопросы по заданию» в личном кабинете.
-   
-Желаем успехов в выполнении домашнего задания!
+# Домашнее задание к занятию «GitLab» Тукаев Айрат
 
 ---
 
@@ -26,6 +11,12 @@
 3. Зарегистрируйте gitlab-runner для этого проекта и запустите его в режиме Docker. Раннер можно регистрировать и запускать на той же виртуальной машине, на которой запущен GitLab.
 
 В качестве ответа в репозиторий шаблона с решением добавьте скриншоты с настройками раннера в проекте.
+
+**Решение №1**
+
+! Скрин 1 (img/img1.png)
+
+! Скрин 2 (img/img2.png)
 
 ---
 
@@ -41,7 +32,18 @@
  * файл gitlab-ci.yml для своего проекта или вставьте код в соответствующее поле в шаблоне; 
  * скриншоты с успешно собранными сборками.
  
- 
+ **Решение №1**
+
+! Скрин 3 (img/img3.png)
+
+! Скрин 4 (img/img4.png)
+
+! Скрин 5 (img/img5.png)
+
+! Скрин 6 (img/img6.png)
+
+[gitlab-ci.yml](https://github.com/AyratTukay/sdvps-materials/blob/main/.gitlab-ci.yml)
+
 ---
 ## Дополнительные задания* (со звёздочкой)
 
