added a solution for task 8-03 (2)

--- a/8-03.md
+++ b/8-03.md
@@ -13,10 +13,10 @@
 В качестве ответа в репозиторий шаблона с решением добавьте скриншоты с настройками раннера в проекте.
 
 **Решение №1**
+'
+! [Скрин 1] (img/img1.png)'
 
-! Скрин 1 (img/img1.png)
-
-! Скрин 2 (img/img2.png)
+! [Скрин 2] (img/img2.png)
 
 ---
 
@@ -34,13 +34,13 @@
  
  **Решение №1**
 
-! Скрин 3 (img/img3.png)
+! [Скрин 3] (img/img3.png)
 
-! Скрин 4 (img/img4.png)
+! [Скрин 4] (img/img4.png)
 
-! Скрин 5 (img/img5.png)
+! [Скрин 5] (img/img5.png)
 
-! Скрин 6 (img/img6.png)
+! [Скрин 6] (img/img6.png)
 
 [gitlab-ci.yml](https://github.com/AyratTukay/sdvps-materials/blob/main/.gitlab-ci.yml)
 
