added a solution for task 8-03 (4)

--- a/8-03.md
+++ b/8-03.md
@@ -14,11 +14,9 @@
 
 **Решение №1**
 
-'
-![Скрин 1](img/img1.png)'
+![Скрин 1](img/img1.png)
 
-'
-![Скрин 2](img/img2.png)'
+![Скрин 2](img/img2.png)
 
 ---
 
@@ -36,17 +34,13 @@
  
  **Решение №1**
 
-'
-![Скрин 3](img/img3.png)'
+![Скрин 3](img/img3.png)
 
-'
-![Скрин 4](img/img4.png)'
+![Скрин 4](img/img4.png)
 
-'
-![Скрин 5](img/img5.png)'
+![Скрин 5](img/img5.png)
 
-'
-![Скрин 6](img/img6.png)'
+![Скрин 6](img/img6.png)
 
 [gitlab-ci.yml](https://github.com/AyratTukay/sdvps-materials/blob/main/.gitlab-ci.yml)
 
